Updated files with all functionality. Directory structure remaining

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-
+    
     <!-- Polyfill(s) for older browsers -->
+    <link rel="stylesheet" href="node_modules/devScripts/Bootstrap3.3.7.css">
+    <script src="node_modules/devScripts/jquery3.2.1.js"></script>
+    <script src="node_modules/devScripts/boostrap.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
-
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-
     <script src="systemjs.config.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script> 
+    <script src="node_modules/devScripts/jspdf.js"></script> 
+    <script src="node_modules/devScripts/html2canvas.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
